[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/UserInterface/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/musicOff.png" type="Texture" id=2]
[ext_resource path="res://src/UserInterface/ScreenFader.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/logo-420.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/information.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/musicOn.png" type="Texture" id=6]
[ext_resource path="res://assets/art/player/mHero_ [elf].png" type="Texture" id=7]
[ext_resource path="res://assets/art/forest/forestDecoration_0.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/return.png" type="Texture" id=9]
[ext_resource path="res://assets/audio/confirm_style_2_001.ogg" type="AudioStream" id=11]
[ext_resource path="res://src/UserInterface/StartMenu.gd" type="Script" id=14]
[ext_resource path="res://assets/audio/Mid-Air Machine - Breathing Out.mp3" type="AudioStream" id=19]
[ext_resource path="res://assets/ui/monogram-extended-60.tres" type="DynamicFont" id=20]
[ext_resource path="res://assets/audio/confirm_style_2_echo_001.ogg" type="AudioStream" id=21]
[ext_resource path="res://assets/ui/Square_DIY_Buttons_16x16.png" type="Texture" id=23]

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 8 )
region = Rect2( 96, 140, 16, 35 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 8 )
region = Rect2( 112, 140, 16, 35 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 8 )
region = Rect2( 128, 140, 16, 35 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 8 )
region = Rect2( 144, 140, 16, 35 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Theme" id=49]
default_font = ExtResource( 20 )

[sub_resource type="Animation" id=51]
resource_name = "idle"
length = 4.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Welcome/PlayButton:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25, 1, 2.2, 3 ),
"transitions": PoolRealArray( 1, 2.46229, 0.5, 2.14355 ),
"update": 0,
"values": [ 0.0, 0.5, 0.0, -0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Welcome/PlayButton:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.95, 1.95, 2.95, 3.8 ),
"transitions": PoolRealArray( 2.2974, 0.574349, 2.14355, 0.466517 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=50]
resource_name = "pop"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Frame:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.2, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 3.73213, 0.615572 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1.16, 1.16 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frame:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.2, 0.4, 0.65, 0.8 ),
"transitions": PoolRealArray( 1, 1, 0.535887, 1.41421, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 2.2, -2.2, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Welcome/Player:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Welcome/Fire:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Welcome/PlayButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.05, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Welcome/CreditsButton:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.05, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, -2 ),
"update": 0,
"values": [ Vector2( -48, 144 ), Vector2( -48, 144 ), Vector2( 16, 144 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SoundButtonOff:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.05, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, -2 ),
"update": 0,
"values": [ Vector2( 344, 144 ), Vector2( 344, 144 ), Vector2( 280, 144 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SoundButtonOn:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.05, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, -2 ),
"update": 0,
"values": [ Vector2( 344, 144 ), Vector2( 344, 144 ), Vector2( 280, 144 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Logo:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.05, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource( 14 )
skip_menu = true

[node name="Frame" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -55.0
margin_right = 75.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 75, 55 )
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 48, 48 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
margin_left = 128.0
margin_top = 27.0
margin_right = 548.0
margin_bottom = 447.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButtonOff" parent="." instance=ExtResource( 1 )]
margin_left = 280.0
margin_top = 144.0
margin_right = 305.0
margin_bottom = 169.0
width = 25
height = 25
variant = 7

[node name="TextureRect3" type="TextureRect" parent="SoundButtonOff"]
margin_left = 2.0
margin_top = 2.0
margin_right = 23.0
margin_bottom = 23.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButtonOn" parent="." instance=ExtResource( 1 )]
margin_left = 280.0
margin_top = 144.0
margin_right = 305.0
margin_bottom = 169.0
width = 25
height = 25
variant = 7

[node name="TextureRect2" type="TextureRect" parent="SoundButtonOn"]
margin_left = 2.0
margin_top = 2.0
margin_right = 23.0
margin_bottom = 23.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Welcome" type="Node2D" parent="."]

[node name="Player" type="AnimatedSprite" parent="Welcome"]
position = Vector2( 150, 91 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 33 )
frame = 1
speed_scale = 1.2
playing = true

[node name="Fire" type="AnimatedSprite" parent="Welcome"]
position = Vector2( 180, 109 )
frames = SubResource( 42 )
frame = 1
playing = true

[node name="CreditsButton" parent="Welcome" instance=ExtResource( 1 )]
margin_left = 16.0
margin_top = 144.0
margin_right = 41.0
margin_bottom = 169.0
width = 25
height = 25
variant = 7

[node name="TextureRect2" type="TextureRect" parent="Welcome/CreditsButton"]
margin_left = 2.0
margin_top = 1.0
margin_right = 23.0
margin_bottom = 22.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="Welcome" instance=ExtResource( 1 )]
margin_left = 124.0
margin_top = 118.0
margin_right = 197.0
margin_bottom = 136.0
rect_rotation = -0.190088
rect_scale = Vector2( 1.0336, 1.0336 )
rect_pivot_offset = Vector2( 36, 9 )
width = 73
height = 18
variant = 4
text = "- PLAY -"
color = Color( 1, 1, 1, 1 )

[node name="Credits" type="Node2D" parent="."]
visible = false

[node name="Node2D" type="Node2D" parent="Credits"]
position = Vector2( 440, 360 )
scale = Vector2( 0.2, 0.2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/Node2D"]
margin_left = -1755.0
margin_top = -1400.0
margin_right = -1045.0
margin_bottom = -1105.0
theme = SubResource( 49 )
custom_colors/default_color = Color( 0.266667, 0.266667, 0.266667, 1 )
text = "Game created by:
Vadzim Liakhovich

Music by:
Mid-Air Machine (Creative Commons 4.0 License)

Graphics by:
analogStudios_"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="Credits" instance=ExtResource( 1 )]
margin_left = 16.0
margin_top = 144.0
margin_right = 41.0
margin_bottom = 169.0
width = 25
height = 25
variant = 7

[node name="TextureRect2" type="TextureRect" parent="Credits/BackButton"]
margin_left = 2.0
margin_top = 1.0
margin_right = 23.0
margin_bottom = 22.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ScreenFader" parent="FadeLayer" instance=ExtResource( 3 )]

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -15.0

[node name="ButtonsSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="PlayButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 51 )
anims/pop = SubResource( 50 )

[connection signal="pressed" from="SoundButtonOff" to="." method="_on_SoundButtonOff_pressed"]
[connection signal="pressed" from="SoundButtonOn" to="." method="_on_SoundButtonOn_pressed"]
[connection signal="pressed" from="Welcome/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Welcome/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Credits/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
